--- a/mockstyles.css
+++ b/mockstyles.css
@@ -1,11 +1,14 @@
 /*Logo Design*/
 h1 {
-    text-align: left;
+    text-align: right;
     font-size: 60px;
     color: blue;
-    padding-left: 15%;
+    padding-right: 30%;
 }
 .homepage {
-    color: orange;
+    text-align: left;
     font-size: 65px;
+    color: orange;
+    background-color: black;
+    padding-right: 10%
 }
