--- a/mockstyles.css
+++ b/mockstyles.css
@@ -11,6 +11,7 @@ h1 {
     font-family: arsenal;
     color: orange;
     background-color: black;
+    border-radius: 2px;
 }    
 button:hover {
     background-color: gray;
