--- a/mockstyles.css
+++ b/mockstyles.css
@@ -3,7 +3,7 @@ h1 {
     display: inline-block;
     font-size: 98px;
     font-family: Radley;
-    color: #00308F;
+    color: #0066b2;
     padding-left: 1%;
 }
 .homepage {
