--- a/mockstyles.css
+++ b/mockstyles.css
@@ -25,6 +25,14 @@ button {
     padding-left: 3%;
     background-color: #A8A8A8;
 }
+.logoone {
+    width: 40px;
+    height: 20px;
+    background-color: #0039a6;
+    border-radius: 999px;
+}
+.logotwo {
+}
 /*footer*/
 .copyright {
     clear: right;
