--- a/mockstyles.css
+++ b/mockstyles.css
@@ -22,8 +22,8 @@ button {
     display: inline-block;
 }
 .logoone {
-    width: 300px;
-    height: 100px;
+    width: 500px;
+    height: 50px;
     background-color: #0039a6;
     border-radius: 999px;
 }
@@ -32,7 +32,7 @@ button {
 .div1 {
     padding-left: 3%;
     background-color: #A8A8A8;
-    height: 300px;
+    background-size: auto 300px;
 }
 /*footer*/
 .copyright {
