--- a/mockstyles.css
+++ b/mockstyles.css
@@ -33,7 +33,7 @@ button {
 .div1 {
     padding-left: 3%;
     background-color: #A8A8A8;
-    background-size: auto 100px;
+    background-size: 100px 100px;
 }
 /*footer*/
 .copyright {
