--- a/mockstyles.css
+++ b/mockstyles.css
@@ -9,7 +9,7 @@
     height: 50px;
     background-color: #0039a6;
     border-radius: 999px;
-    padding: 0;
+    padding-left: 1px;
 }
 h1 {
     display: inline-block;
