--- a/mockstyles.css
+++ b/mockstyles.css
@@ -3,7 +3,7 @@
     background-color: #A8A8A8;
     padding-left: 3px;
 }
-.logoone {
+.logone {
     width: 500px;
     height: 50px;
     background-color: #0039a6;
