--- a/mockstyles.css
+++ b/mockstyles.css
@@ -8,6 +8,7 @@
     height: 50px;
     background-color: #0039a6;
     border-radius: 999px;
+    display: inline-block;
 }
 h1 {
     display: inline-block;
