--- a/mockstyles.css
+++ b/mockstyles.css
@@ -9,7 +9,7 @@
     background-color: #0039a6;
     border-radius: 999px;
     display: block;
-    margin-left: 1px;
+    margin-right: 1px;
 }
 h1 {
     display: inline-block;
