--- a/mockstyles.css
+++ b/mockstyles.css
@@ -9,7 +9,7 @@
     background-color: #0039a6;
     border-radius: 999px;
     display: block;
-    margin-right: 1px;
+    float: left;
 }
 h1 {
     display: inline-block;
@@ -35,6 +35,12 @@ button {
 }
 
 .logotwo {
+    width: 500px;
+    height: 50px;
+    background-color: #0039a6;
+    border-radius: 999px;
+    display: block;
+    float: right;
 }
 
 /*footer*/
