--- a/mockstyles.css
+++ b/mockstyles.css
@@ -1,7 +1,7 @@
 /*Logo Design*/
 .div1 {
     background-color: #A8A8A8;
-    padding-left: 3px;
+    padding-left: 3;
 }
 .logone {
     width: 500px;
