--- a/mockstyles.css
+++ b/mockstyles.css
@@ -52,7 +52,7 @@ body {
     font-size: 98px;
     font-family: Radley;
     color: #0039a6;
-    padding-left: 1%;
+    padding-left: 3px;
 }
 .homepage-o {
     display: inline-block;
