--- a/mockstyles.css
+++ b/mockstyles.css
@@ -61,11 +61,11 @@ body {
 }
 .search-bar {
     float: right;
-    width: 350px;
-    height: 25px;
+    width: 450px;
+    height: 20px;
     background-color: #D3D3D3;
     border-radius: 999px;
-    padding-left: 50px;
+    padding-left: 25px;
 }
 #about-us {
     font-size: 14px;
@@ -91,6 +91,14 @@ body {
     padding-right: 5px;
 }
 #munchkin {
+    font-size: 14px;
+    text-decoration: underline;
+    color: black;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-right: solid;
+}
+#price-inquiry {
     font-size: 14px;
     text-decoration: underline;
     color: black;
