--- a/mockstyles.css
+++ b/mockstyles.css
@@ -131,7 +131,7 @@ body {
   padding-top: 5px;
   background-color: black;
   border-radius: 10px;
-  position: fixed;
+  position: absolute;
   top: 10px;
   left: 10px;
   width: 70px;
