--- a/formstyles.css
+++ b/formstyles.css
@@ -1,48 +1,166 @@
-<!-Global-->
+/*Global*/
 body {
-  background-color: pink;
+  background-color: #686868;
 }
 div {
   padding: 5px
 }
 .wrapper {
-  width: 500px;
+  width: 650px;
   margin: 0 auto;
   border-style: solid;
-  border-color: white;
+  border-color: black;
 }
-<!-header-->
+
+/*Logo*/
+.logo-one {
+  width: 550px;
+  max-width: 100%;
+  height: 50px;
+  background-color: #0039a6;
+  border-radius: 999px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+}
+.logo-two {
+  width: 550px;
+  max-width: 100%;
+  height: 50px;
+  background-color: #0039a6;
+  border-radius: 999px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+.div1 {
+  background-color: #A8A8A8;
+  position:relative;
+  z-index: 0;
+  padding: 30px;
+}
+.div1 a {
+  text-decoration: none;
+}
+.homepage-r-small {
+  font-size: 60px;
+  font-family: arsenal;
+  color: orange;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  background-color: black;
+  border-radius: 10px;
+  position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 70px;
+}    
+.homepage-r-small:hover {
+  background-color: gray;
+}
+.homepage-m {
+  display: inline-block;
+  font-size: 98px;
+  font-family: Radley;
+  color: #0039a6;
+  padding-left: 3px;
+}
+.homepage-o {
+  display: inline-block;
+  font-size: 75px;
+  font-family: Comic Sans;
+  color: gray;
+}
+.search-bar {
+  float: right;
+  width: 450px;
+  height: 20px;
+  background-color: #D3D3D3;
+  border-radius: 999px;
+  padding-left: 25px;
+}
+#about-us {
+  font-size: 14px;
+  text-decoration: underline;
+  color: black;
+  border-right: solid;
+  padding-right: 5px;
+}
+#specs {
+  font-size: 14px;
+  text-decoration: underline;
+  color: black;
+  border-right: solid;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+#features {
+  font-size: 14px;
+  text-decoration: underline;
+  color: black;
+  border-right: solid;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+#munchkin {
+  font-size: 14px;
+  text-decoration: underline;
+  color: black;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-right: solid;
+}
+#price-inquiry {
+  font-size: 14px;
+  text-decoration: underline;
+  color: black;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+/*header*/
 header {
-  background-color: #eec0c8;
+  background-color: gray;
   padding: 5px;
+  border: solid;
+  border-color: black;
 }
 h1 {
   text-align: center;
-  color: purple;
+  color: #0039a6;
 }
 p {
   text-align: center;
-  color: purple;
+  color: #0039a6;
 }
-<!-main-->
+/*main*/
 main{
   padding: 10px;
 }
-<!-Full Name-->
+/*Full Name*/
 #name-label{
-  color: red;
+  color: orange;
 }
 input[type="text"] {
   float: right;
 }
-<!-Email-->
+/*Email*/
 #email-label {
-  color: red;
+  color: orange;
 }
 input[type="email"] {
   float: right;
 }
-<!-Favorite Number-->
+/*Phone Number*/
+#phone-number {
+  color: orange;
+}
+input[type="tel"] {
+  float: right;
+}
+/*Favorite Number*/
 #number-label{
   text-decoration: underline;
   color: #662d91;
@@ -57,7 +175,7 @@ input[type="email"] {
   text-align: center;
   margin: 0 auto;
 }
-<!-Favorite Animal-->
+/*Favorite Animal*/
 label[for="dropdown"] {
   text-decoration: underline;
   color: #662d91;
@@ -72,7 +190,7 @@ select {
   text-align: center;
   margin: 0 auto;
 }
-<!-Favorite Subject-->
+/*Favorite Subject*/
 label[for="subject"] {
   color: #662d91;
   display: block;
@@ -80,7 +198,7 @@ label[for="subject"] {
   padding-bottom: 10px;
   text-decoration: underline;
 }
-<!-Favorite Subject Label-->
+/*Favorite Subject Label*/
 label[for="Art"]{
   padding: 20px;
 }
@@ -96,13 +214,13 @@ label[for="Math"]{
 label[for="Science"]{
   padding: 20px;
 }
-<!-Favorite Subject Radio-->
+/*Favorite Subject Radio*/
 input[type="radio"]{
   float: right;
   padding-left: 20px;
   width: 40px;
 }
-<!-Favorite Color-->
+/*Favorite Color*/
 label[for="color"] {
   color: #662d91;
   display: block;
@@ -110,7 +228,7 @@ label[for="color"] {
   padding-bottom: 10px;
   text-decoration: underline;
 }
-<!-Favorite Color Label-->
+/*Favorite Color Label*/
 label[for="Blue"] {
   padding: 20px;
   color: blue;
@@ -139,13 +257,13 @@ label[for="Yellow"] {
   padding: 20px;
   color: yellow;
 }
-<!-Favorite Color Checkbox-->
+/*Favorite Color Checkbox*/
 input[type="checkbox"] {
   float: right;
   padding-left: 20px;
   width: 40px;
 }
-<!-Any Other Favorites-->
+/*Any Other Favorites*/
 label[for="text"] {
   color: #662d91;
   display: block;
@@ -158,7 +276,7 @@ textarea{
   display: block;
   margin: 0 auto;
 }
-<!-Submit-->
+/*Submit*/
 button {
   display: block;
   margin: 0 auto;
