--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,15 @@ main {
   bottom: 0;
   z-index: -1;
 }
+.div1 {
+    background-color: #A8A8A8;
+    position:relative;
+    z-index: 0;
+    padding: 30px;
+}
+.div1 a {
+    text-decoration: none;
+}
 header {
   background-color: #A8A8A8;
   position:relative;
