--- a/mockstyles.css
+++ b/mockstyles.css
@@ -1,4 +1,4 @@
-/*https://zayragarcia456.github.io/robotics/mock.html*/
+/*https://zayragarcia456.github.io/robotics/homepage.html*/
 
 /*Global*/
 body {
