--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
     "main main main" 
     "footer footer footer";
     grid-template-columns: repeat(3, 4fr);
-    grid-template-rows: 240px auto 100px;
+    grid-template-rows: auto auto 100px;
   }
   .item1 {
     grid-area: header;
