--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,6 @@ h1 {
   color: #0039a6;
 }
 p {
-  text-align: center;
   color: #0039a6;
 }
 #title {
@@ -286,20 +285,15 @@ p {
   animation-duration: 1.5s;
 }
 
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
 .homemunchkin {
   font-size: 20px;
 }
 #munchdes {
   text-align: left;
+}
+.homeother {
+  text-align: center;
 }
 .homemunchkin img{
   display: inline-block;
@@ -307,22 +301,25 @@ p {
   padding-right: 50px;
   padding-top: 20px;
 }
+#homeimgbrain {
+  padding-left: 75px;
+}
 .homebrain {
   display: inline-block;
   text-align: left;
-  padding-left: 149px;
+  padding-left: 165px;
   color: black;
 }
 .homesensor1 { 
   display: inline-block;
   text-align: center;
-  padding-left: 348px;
+  padding-left: 360px;
   color: black;
 }
 .homemotor1 {
   display: inline-block;
   text-align: right;
-  padding-left: 358px;
+  padding-left: 370px;
   color: black;
 }
 /*Form Styles*/
@@ -487,4 +484,42 @@ body {
 img {
   max-width: 350px;
 }
+h2 {
+  text-align: center;
+}
+#munchdes {
+  text-align: center;
+}
+#homeimgbrain {
+  padding-left: 35px;
+}
+.homebrain {
+  padding-left: 30px;
+}
+.homesensor1 {
+  padding-left: 25px;
+}
+.homemotor1 {
+  padding-left: 30px;
+}
+.homemunchkin {
+  font-size: 10px;
+  padding: 0;
+}
+.homemunckin p {
+  padding: 10px;
+}
+.homemunchkin img {
+  padding: 5px;
+  max-width: 140px;
+}
+}
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
 }
