--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ main {
   "main main main" 
   "footer footer footer";
   grid-template-columns: repeat(3, 4fr);
-  grid-template-rows: auto auto 100px;
+  grid-template-rows: auto auto 5px;
 }
 .item1 {
   grid-area: header;
@@ -37,7 +37,6 @@ main {
 }
 img {
   min-width: 10px;
-  max-width: 500px;
   display: block;
   margin: 0 auto;
 }
@@ -209,13 +208,17 @@ p {
 /*homepage styles*/
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 610px;
   position: relative;
   margin: auto;
   background-color: #0039a6;
   border: solid;
 }
-
+.mySlides {
+  width: 600px;
+  display: block;
+  text-align: center;
+}
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -284,8 +287,6 @@ p {
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
-
 .homemunchkin {
   font-size: 20px;
 }
@@ -300,6 +301,7 @@ p {
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 20px;
+  width: 500px;
 }
 #homeimgbrain {
   padding-left: 75px;
@@ -321,6 +323,73 @@ p {
   text-align: right;
   padding-left: 370px;
   color: black;
+}
+
+/*About Us*/
+.aboutushead {
+  color: orange;
+  text-align: center;
+  font-size: 80px;
+  text-decoration: underline;
+  padding-bottom: 30px;
+  border-bottom: solid;
+  border-color: gray;
+  border-width: 5px;
+}
+#tcdbuilding {
+  display: block;
+  text-align: center;
+  width: 800px;
+}
+.backinfo {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 20px;
+  font-size: 20px;
+}
+.backinfo2 {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 30px;
+  padding-top: 10px;
+  font-size: 20px;
+  border-bottom: solid;
+  border-color: gray;
+  border-width: 5px;
+}
+.contactus {
+  color: orange;
+  font-size: 50px;
+  padding-left: 50px;
+  text-align: left;
+}
+.contactnumber {
+  padding-left: 50px;
+  color: orange;
+  float: left;
+}
+.contactpernumber {
+  color: orange;
+  float: right;
+  padding-right: 1300px;
+}
+.contactemail {
+  padding-top: 30px;
+  padding-left: 50px;
+  color: orange;
+  float: left;
+}
+.contactperemail {
+  padding-top: 30px;
+  color: orange;
+  float: right;
+  padding-right: 1354px;
+}
+.contactfacility {
+  padding-top: 30px;
+  padding-left: 50px;
+  float: left;
+  color: orange;
 }
 /*Form Styles*/
 /*Full Name*/
@@ -409,6 +478,9 @@ label[for="updated-image"] {
   text-align: center;
   text-decoration: underline;
 }
+#recentmunch {
+  width: 450px;
+}
 /*Agreement Label*/
 label[for="agreement"] {
   color: orange;
@@ -452,6 +524,7 @@ button {
 
 /*footer*/
 footer {
+  clear: both;
   display: block;
   text-align: center;
 }
@@ -519,6 +592,33 @@ h2 {
   padding: 5px;
   max-width: 122px;
 }
+.backinfo {
+  text-align: center;
+}
+.backinfo2 {
+  text-align: center;
+}
+.contactpernumber {
+  text-align: center;
+  float: left;
+  padding-left: 50px;
+  padding-right: 0;
+}
+.contactemail {
+  text-align: center;
+  padding-top: 0;
+}
+.contactperemail {
+  text-align: center;
+  float: left;
+  padding-top: 0;
+  padding-left: 50px;
+  padding-right: 0;
+}
+}
+.contactfacility{
+  text-align: center;
+  padding-top: 0;
 }
 @keyframes fade {
   from {opacity: .4} 
