--- a/styles.css
+++ b/styles.css
@@ -434,6 +434,10 @@ p {
 #power-house {
   padding-left: 80px;
 }
+.brain-house-des {
+  text-align: center;
+  padding-right: 400px;
+}
 
 /*Form Styles*/
 /*Full Name*/
