--- a/styles.css
+++ b/styles.css
@@ -427,18 +427,64 @@ p {
   display: inline-block;
   padding-left: 50px;
   padding-right: 50px;
-  padding-top: 20px;
+  padding-top: 30px;
   width: 500px;
   max-height: 350px;
 }
-#power-house {
-  padding-left: 80px;
+.featuresmain p {
+  padding-bottom: 20px;
 }
 .brain-house-des {
-  text-align: center;
-  padding-right: 400px;
+  color: #0039a6;
+  text-align: left;
+  border-bottom: solid;
+  border-width: 5px;;
 }
-
+.power-house-des {
+  display: inline-block;
+  text-align: left;
+  padding-left: 30px;
+  color: #0039a6;
+}
+.motor-crane1 {
+  display: inline-block;
+  text-align: center;
+  padding-left: 85px;
+  color: #0039a6;
+}
+.sensor-des1 {
+  display: inline-block;
+  color: #0039a6;
+  padding-left: 170px;
+}
+.brain-house-des1 {
+  color: #0039a6;
+  text-align: left;
+  border-bottom: solid;
+  border-width: 5px;;
+  padding-top: 20px;
+}
+.munch-claw {
+  display: inline-block;
+  text-align: left;
+  padding-left: 75px;
+  color: #0039a6;
+}
+.motor-chain {
+  display: inline-block;
+  text-align: center;
+  padding-left: 195px;
+  color: #0039a6;
+}
+.sensor-des2 {
+  display: inline-block;
+  color: #0039a6;
+  padding-left: 270px;
+}
+.featuresdes3 {
+  color: black;
+  padding: 15px;
+}
 /*Form Styles*/
 /*Full Name*/
 .required1 {
@@ -668,6 +714,15 @@ h2 {
 }
 .mySlides {
   width: 395px;
+}
+.featuresmain p{
+  font-size: 10px;
+  padding-left: 0px;
+}
+.featuresmain img{
+  max-width: 145px;
+  padding: 0px;
+  max-height: 110px;
 }
 }
 .contactfacility{
